# Zeltra

./: .gitignore  LICENSE  PROGRESS.md  PROMPT_BACKEND.md  PROMPT_FRONTEND.md  prompt.md
.github/: dependabot.yml
.github/workflows/: audit-pages.yml  ci.yml  e2e.yml  frontend-quality.yml  security.yml
.kiro/specs/api-polish-phase5/: design.md  requirements.md  tasks.md
.kiro/specs/ledger-core/: design.md  requirements.md  tasks.md
.kiro/specs/reports-simulation/: design.md  requirements.md  tasks.md
.kiro/specs/transaction-workflow/: design.md  requirements.md  tasks.md
backend/: .env.example  Cargo.toml  deny.toml
backend/.cargo/: audit.toml  config.toml
backend/bins/migrator/: Cargo.toml
backend/bins/migrator/src/: main.rs
backend/bins/seeder/: Cargo.toml
backend/bins/seeder/src/: main.rs
backend/bins/server/: Cargo.toml
backend/bins/server/src/: main.rs
backend/config/: default.toml  development.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs
backend/crates/api/src/extractors/: mod.rs
backend/crates/api/src/middleware/: auth.rs  mod.rs
backend/crates/api/src/routes/: accounts.rs  approval_rules.rs  attachments.rs  auth.rs  budgets.rs  currencies.rs  dashboard.rs  dimensions.rs  exchange_rates.rs  fiscal.rs  health.rs  mod.rs  organizations.rs  reports.rs  simulation.rs  transactions.rs
backend/crates/core/: Cargo.toml
backend/crates/core/proptest-regressions/currency/: props.txt
backend/crates/core/src/: lib.rs
backend/crates/core/src/attachment/: error.rs  mod.rs  service.rs  types.rs
backend/crates/core/src/auth/: mod.rs  password.rs
backend/crates/core/src/budget/: error.rs  mod.rs  service.rs  tests.rs  types.rs  variance.rs
backend/crates/core/src/currency/: allocation.rs  conversion.rs  exchange.rs  mod.rs  props.rs  service.rs
backend/crates/core/src/dashboard/: mod.rs  types.rs
backend/crates/core/src/dimension/: filter.rs  mod.rs
backend/crates/core/src/fiscal/: mod.rs  period.rs
backend/crates/core/src/ledger/: balance.rs  entry.rs  error.rs  fiscal.rs  mod.rs  service.rs  service_props.rs  transaction.rs  types.rs  validation.rs  validation_props.rs
backend/crates/core/src/reports/: error.rs  mod.rs  service.rs  tests.rs  types.rs
backend/crates/core/src/simulation/: benchmark.rs  cache.rs  engine.rs  error.rs  mod.rs  scenario.rs  tests.rs  types.rs
backend/crates/core/src/storage/: config.rs  error.rs  mod.rs  service.rs
backend/crates/core/src/workflow/: approval.rs  approval_props.rs  error.rs  mod.rs  reversal.rs  reversal_props.rs  service.rs  service_props.rs  types.rs
backend/crates/db/: Cargo.toml
backend/crates/db/proptest-regressions/repositories/: report_integration_tests.txt  workflow_integration_tests.txt
backend/crates/db/src/: lib.rs  rls.rs
backend/crates/db/src/entities/: approval_rules.rs  attachments.rs  budget_line_dimensions.rs  budget_lines.rs  budgets.rs  chart_of_accounts.rs  currencies.rs  dimension_types.rs  dimension_values.rs  email_verification_tokens.rs  entry_dimensions.rs  exchange_rates.rs  fiscal_periods.rs  fiscal_years.rs  ledger_entries.rs  mod.rs  organization_usage.rs  organization_users.rs  organizations.rs  prelude.rs  sea_orm_active_enums.rs  sessions.rs  tier_limits.rs  transactions.rs  users.rs
backend/crates/db/src/migration/: m20260108_000001_initial.rs  m20260108_000002_sessions.rs  m20260108_000003_force_rls.rs  m20260108_000004_email_verification.rs  mod.rs
backend/crates/db/src/repositories/: account.rs  approval_rule.rs  attachment.rs  budget.rs  budget_integration_tests.rs  budget_tests.rs  dashboard.rs  dashboard_integration_tests.rs  dimension.rs  email_verification.rs  exchange_rate.rs  fiscal.rs  mod.rs  organization.rs  report.rs  report_integration_tests.rs  report_tests.rs  session.rs  simulation.rs  simulation_integration_tests.rs  subscription.rs  transaction.rs  user.rs  workflow.rs  workflow_integration_tests.rs
backend/crates/db/tests/: concurrent_test.rs  exchange_rate_test.rs  organization_test.rs  rls_isolation_test.rs  session_test.rs  subscription_test.rs  transaction_test.rs  trigger_test.rs  user_test.rs  workflow_test.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: auth.rs  auth_phase1_tests.rs  config.rs  email.rs  email_tests.rs  error.rs  error_tests.rs  jwt.rs  jwt_tests.rs  lib.rs
backend/crates/shared/src/types/: id.rs  id_tests.rs  mod.rs  money.rs  money_tests.rs  pagination.rs  pagination_tests.rs
backend/docker/: Dockerfile  docker-compose.yml
contracts/: REQUESTS.md  api-examples.http  openapi.yaml
docs/: ADVERSARIAL_QA_PHASE_2.md  ADVERSARIAL_QA_PHASE_3.md  API_SPEC.md  ARCHITECTURE.md  BUSINESS_MODEL.md  DATABASE_SCHEMA.md  FEATURES.md  README.md  ROADMAP.md
frontend/: Dockerfile  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: approvals.spec.ts  auth.spec.ts  smoke.spec.ts  transactions.spec.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: MSWProvider.tsx
frontend/src/components/accounts/: AccountForm.tsx
frontend/src/components/dashboard/: RecentActivity.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/providers/: AppProviders.tsx
frontend/src/components/reports/: ReportsNav.tsx
frontend/src/components/simulation/: SimulationChart.tsx  SimulationControls.tsx
frontend/src/components/transactions/: CreateTransactionDialog.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/queries/: accounts.ts  auth.ts  budgets.ts  dashboard.ts  dimensions.ts  exchange-rates.ts  fiscal.ts  ledger.ts  organizations.ts  reports.ts  transactions.ts
frontend/src/lib/stores/: authStore.ts
frontend/src/lib/utils/: export-pdf.ts  export.ts  format.ts
frontend/src/mocks/: handlers.ts
frontend/src/types/: accounts.ts  auth.ts  organizations.ts  simulation.ts  transactions.ts
(+27 files in other folders)
