[workspace]
resolver = "2"
members = ["crates/*", "bins/*"]

[workspace.package]
version = "0.1.0"
authors = ["Zeltra Team"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"

# ============================================================================
# CENTRALIZED DEPENDENCIES - Single source of truth for versions
# ============================================================================
[workspace.dependencies]
# === Web Framework ===
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "fs", "cors", "compression-gzip", "trace", 
    "timeout", "limit", "request-id", "sensitive-headers"
]}
hyper = { version = "1.6", features = ["full"] }
hyper-util = "0.1"

# === Async Runtime ===
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# === Database (SeaORM 1.1 - Latest Stable) ===
sea-orm = { version = "1.1", features = [
    "sqlx-postgres", 
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid"
]}
sea-orm-migration = "1.1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"

# === Money & Time (CRITICAL - no floats!) ===
rust_decimal = { version = "1.37", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.37"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# === Validation ===
validator = { version = "0.20", features = ["derive"] }
garde = { version = "0.22", features = ["derive", "email", "url"] }

# === Error Handling ===
thiserror = "2.0"
anyhow = "1.0"

# === Logging & Tracing ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# === Security & Auth ===
argon2 = "0.5"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# === Configuration ===
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"

# === HTTP Client (for exchange rates, etc) ===
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json", "gzip"
]}

# === Parallel Processing (for simulation) ===
rayon = "1.10"

# === Utilities ===
bytes = "1.9"
once_cell = "1.20"
dashmap = "6.1"
pin-project = "1.1"

# ============================================================================
# DEV DEPENDENCIES
# ============================================================================
[workspace.dependencies.fake]
version = "4.4"
features = ["derive"]

[workspace.dependencies.mockall]
version = "0.13"

[workspace.dependencies.rstest]
version = "0.26"

[workspace.dependencies.testcontainers]
version = "0.24"

[workspace.dependencies.testcontainers-modules]
version = "0.12"
features = ["postgres"]

[workspace.dependencies.criterion]
version = "0.6"
features = ["html_reports", "async_tokio"]

[workspace.dependencies.proptest]
version = "1.5"

# ============================================================================
# WORKSPACE LINTS - Consistent across all crates
# ============================================================================
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these (too noisy)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
# CRITICAL for financial app
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"

# ============================================================================
# BUILD PROFILES
# ============================================================================
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3  # Optimize deps in dev for faster runtime

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
inherits = "release"
strip = false
debug = true
