[package]
name = "zeltra-migrator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database migration runner for Zeltra"
publish = false

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
zeltra-db = { path = "../../crates/db" }

sea-orm-migration.workspace = true
tokio.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
