[package]
name = "zeltra-seeder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database seeder for Zeltra development and testing"

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
zeltra-db = { path = "../../crates/db" }

sea-orm.workspace = true
tokio.workspace = true
dotenvy.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[lints]
workspace = true
