[package]
name = "zeltra-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Database layer with SeaORM entities and repositories"

[dependencies]
zeltra-shared = { path = "../shared" }

sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
base64-url = "3.0"

tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[lints]
workspace = true
