[package]
name = "zeltra-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Database layer with SeaORM entities and repositories"

[dependencies]
zeltra-shared = { path = "../shared" }
zeltra-core = { path = "../core" }

sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
base64-url = "3.0"

tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rust_decimal_macros = "1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
futures = "0.3"

[lints]
workspace = true
